fixed vertical spacing between fieldsets

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ body {
 }
 
 .vGap {
-  @apply py-10;
+  @apply py-5;
 }
 
 .eduField {
